First draft of positioning, not quite happy with it, thought.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Courier New', Courier, monospace;
     background-color: lightgray;   
+    margin: 10vw;
+    color: rgba(0, 0, 0, 0.705);
 }
 
 .header {
@@ -12,3 +14,7 @@ body {
     justify-content: space-evenly;
 }
 
+.container-1 {
+    display: flex;
+    justify-content: space-evenly;
+}
