--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-    background-color: rgb(250, 249, 247);
+    font-family: 'Cambria', serif;
+    background-color: rgb(250, 250, 245);
     margin: auto;
     color: rgba(0, 0, 0, 0.705);
     padding: 5%;
-    
+    /*
+    background-image: url("./abstract-5719221_1280.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;*/
 }
 
 
 .header {
+    font-family: 'Century Gothic', sans-serif;
+    font-size: larger;
     margin-left: 10vw;
     margin-right: 10vw;
     margin-top: 10vh;
@@ -18,25 +23,66 @@ body {
     
 }
 
-.footer {
-    margin-top: 10vh;
+nav ul {
+    font-family: 'Century Gothic', sans-serif;
+    font-size: large;
     display: flex;
-    margin-bottom: 3vh;
-}
-.container-1 {
-    max-width: 750px;
-    margin: auto;
+    justify-content: space-evenly;
+    list-style-type: none;
+    padding-top: 0%;
+    padding-bottom: 0%;
+
 }
 
+nav li {
+    display: inline-flex;
+    font-size: 1.5em;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.705);
+    text-decoration: none;
+    transition: color 0.3s;
+    padding: 10px, 0px;
+    border-radius: 10px;
+    
+
+}
+
+.content {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 0;
+    margin-bottom: 5vh;
+    padding: 5%;
+    padding-top: 2%;
+}
+
+img{
+    width: 30%;
+    height: auto;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 0%;
+    display: float-right;
+    border-radius: 5%;
+}
+
+/*
 .nav {
     max-width: 850px;
     margin: auto;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     width: 50%;
+    padding: 10px;
+    
 }
-
+*/
+/*
 .nav-item {
+    /*background-color: rgb(255, 255, 255); 
+    
     display: inline;
     margin: 0 10px;
     font-size: 1.5em;
@@ -44,9 +90,32 @@ body {
     color: rgba(0, 0, 0, 0.705);
     text-decoration: none;
     transition: color 0.3s;
+    padding: 10px;
+    
+}
+*/
+.article {
+    align-content: left;
+    display: float-left;  
+    padding: 3%;
+    margin: 3%;
+}
 
+form {
+    display: flexbox;
+    margin: 0 auto;
+    width: fit-content;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 250);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 
-        
+footer {
+    margin-top: 30vh;
+    display: flex;
+    margin-bottom: 3vh;
+}
+
         
